//
// Copyright 2018 Peter Vrenken.
syntax = "proto3";
import "Clients/_Grpc/_Model.proto";
package EtAlii.Ubigia.Api.Transport.Management.Grpc.WireProtocol;

// The Space Grpc service definition.
service SpaceGrpcService
{
	rpc GetSingle (SpaceSingleRequest) returns (SpaceSingleResponse) {}
	rpc GetMultiple (SpaceMultipleRequest) returns (stream SpaceMultipleResponse) {}
	rpc Post (SpacePostSingleRequest) returns (SpaceSingleResponse) {}
	rpc Put (SpaceSingleRequest) returns (SpaceSingleResponse) {}
	rpc Delete (SpaceSingleRequest) returns (SpaceSingleResponse) {}
}

message SpaceSingleRequest
{
	oneof Selection
	{
		Guid Id = 1;
		string Name = 2;
		Space Space = 3;
	}
}
message SpacePostSingleRequest
{
	Space Space = 1;
	string Template = 2;
}

message SpaceMultipleRequest
{
	Guid AccountId = 1;
}

message SpaceSingleResponse
{
	Space Space = 1;
}

message SpaceMultipleResponse
{
	Space Space = 1;
}
